--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/strapi": "^0.3.6",
     "animate.css": "^4.1.1",
     "core-js": "^3.25.3",
     "node": "14.17.2",
@@ -34,6 +35,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@nuxt/image": "^0.7.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
