--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "*.{css,vue}": "stylelint"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/strapi": "^0.3.6",
     "animate.css": "^4.1.1",
@@ -29,7 +31,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
