--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "core-js": "^3.25.3",
     "node": "14.17.2",
     "nuxt": "^2.15.8",
+    "qr-code-styling": "^1.4.4",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue3-qr-code-styling": "^1.4.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
