--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
+    "vue-uuid": "^2.0.2",
     "vue3-qr-code-styling": "^1.4.6"
   },
   "devDependencies": {
